--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.1-canary.9",
     "@eslint/eslintrc": "^3"
+  },
+  "overrides": {
+    "next": "$next"
   }
 }
