--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@arcjet/next": "^1.0.0-beta.10",
     "@clerk/nextjs": "^6.31.4",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "next": "15.5.1-canary.9",
     "react": "19.1.0",
     "react-dom": "19.1.0"
