--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@t3-oss/env-nextjs": "^0.13.8",
     "next": "15.5.1-canary.9",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
